--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,101 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+html {
+  height: 100%; /* Ensures the html element spans the full height of the page */
+  background-image: linear-gradient(to top right, #9c1112, #323177);
+  background-attachment: fixed; /* Keeps the gradient consistent while scrolling */
+  background-size: cover; /* Ensures the gradient covers the entire viewport */
+  background-repeat: no-repeat; /* Prevents repeating of the gradient */
+}
+
+body {
+  height: 100%; /* Ensures the body spans the same height as html */
+  margin: 0;
+  font-family: 'Montserrat', sans-serif;
+  padding: 0;
+  box-sizing: border-box;
+  background: transparent; /* Allows the html gradient to show through */
+}
+/* Header styles */
+.header {
+  display: flex;
+  justify-content: space-between; /* Align items to the edges */
+  align-items: center; /* Vertically align title and navigation */
+  padding: 20px;
+  background-color: #9c0012;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
+
+.header-title {
+  margin: 0;
+  font-size: 1.5rem;
+  color: #db912f;
+  font-weight: bold;
+}
+
+.header-nav {
+  display: flex;
+  gap: 15px; /* Add space between navigation buttons */
+}
+
+.header-nav-link {
+  text-decoration: none;
+  color: #f5f5f5;
+  font-size: 1.5rem;
+  font-weight: 500;
+  padding: 8px 12px;
+  border-radius: 4px;
+  transition: background-color 0.3s;
+}
+
+.header-nav-link:hover {
+  background-color: #840a0b;
+  color: #fff;
+}
+/* CardSlider CSS*/
+.slider-container {
+  margin-bottom: 50px;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.slider-title {
+  font-size: 1.8rem;
+  font-weight: bold;
+  margin-bottom: 20px;
+  color: #fff;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.slider {
+  position: relative;
+  width: 100%;
+  height: 370px;
+  overflow: hidden;
+  perspective: 1000px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.item {
+  position: absolute;
+  width: 320px;
+  height: 320px;
+  text-align: justify;
+  background-color: #9c1112;
+  border-radius: 10px;
+  padding: 20px;
+  transition: 0.5s;
+  left: calc(50% - 177px);
+  top: 0;
 }
-
-.card {
-  padding: 2em;
+#next,#prev {
+  position: absolute;
+  top: 40%;
+  color: #fff;
+  background-color: transparent;
+  border: none;
+  font-size: xxx-large;
+  font-family: monospace;
+  font-weight: bold;
+  left: 50px;
 }
-
-.read-the-docs {
-  color: #888;
+#next {
+  left: unset;
+  right: 50px;
 }
