--- a/src/App.css
+++ b/src/App.css
@@ -15,10 +15,15 @@ body {
   background: transparent; /* Allows the html gradient to show through */
 }
 /* Header styles */
+.header-logo {
+  width: 60px;
+  height: 60px;
+  object-fit: contain; 
+}
 .header {
   display: flex;
-  justify-content: space-between; /* Align items to the edges */
-  align-items: center; /* Vertically align title and navigation */
+  justify-content: space-between;
+  align-items: center;
   padding: 20px;
   background-color: #9c0012;
   position: sticky;
@@ -33,10 +38,17 @@ body {
   font-weight: bold;
 }
 
-.header-nav {
-  display: flex;
-  gap: 15px; /* Add space between navigation buttons */
+/* Hamburger Menu */
+.hamburger-menu {
+  display: none;
+  background: none;
+  border: none;
+  font-size: 1.8rem;
+  color: #fff;
+  cursor: pointer;
 }
+
+/* Navigation */
 
 .header-nav-link {
   text-decoration: none;
@@ -51,6 +63,41 @@ body {
 .header-nav-link:hover {
   background-color: #840a0b;
   color: #fff;
+}
+
+/* Mobile Styles */
+@media (max-width: 768px) {
+  .hamburger-menu {
+    display: block; /* Show the hamburger menu on mobile */
+  }
+
+  .header-nav {
+    display: flex;
+    gap: 15px;
+    transition: transform 0.6s ease-in-out, opacity 0.6s ease-in-out, visibility 0s;
+    flex-direction: column;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: #9c0012;
+    transform: translateY(-100%);
+    opacity: 0;
+    visibility: hidden;
+    z-index: 1000;
+
+  }
+
+  .header-nav.open {
+    transform: translateY(0);
+    opacity: 1;
+    visibility: visible;
+  }
+
+  .header-nav-link {
+    text-align: center;
+    padding: 15px;
+  }
 }
 /* CardSlider CSS*/
 .slider-container {
@@ -99,3 +146,5 @@ body {
   left: unset;
   right: 50px;
 }
+
+
