added fade in for images, autoscroll to cardslider

--- a/src/components/CircleImageHeading/CircleImageHeading.css
+++ b/src/components/CircleImageHeading/CircleImageHeading.css
@@ -8,8 +8,8 @@
 
 .circle-image {
   flex-shrink: 0;
-  width: 12rem; /* Slightly smaller for mobile-friendly sizing */
-  height: 12rem;
+  width: 17rem;
+  height: 17rem;
   border-radius: 50%;
   overflow: hidden;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -25,12 +25,12 @@
   flex: 1;
 }
 
-.text-content h1 {
-  font-size: 2.5rem; 
-  margin: 0 0 10px;
-  color: #fff; 
-  text-align: center; 
-}
+/* .text-content h1 { */
+/*   font-size: 2.5rem;  */
+/*   margin: 0 0 10px; */
+/*   color: #fff;  */
+/*   text-align: center;  */
+/* } */
 
 .text-content p {
   font-size: 1.3rem; 
@@ -47,14 +47,14 @@
   }
 
   .circle-image {
-    width: 10rem; 
-    height: 10rem;
+    width: 14rem; 
+    height: 14rem;
   }
 
-  .text-content h1 {
-    font-size: 1.7rem;
-    text-align: center;
-  }
+  /* .text-content h1 { */
+  /*   font-size: 1.7rem; */
+  /*   text-align: center; */
+  /* } */
 
   .text-content p {
     font-size: 1.5rem; 
@@ -69,13 +69,13 @@
   }
 
   .circle-image {
-    width: 8rem;
-    height: 8rem;
+    width: 12rem;
+    height: 12rem;
   }
 
-  .text-content h1 {
-    font-size: 1.5rem;
-  }
+  /* .text-content h1 { */
+  /*   font-size: 1.5rem; */
+  /* } */
 
   .text-content p {
     font-size: 1.2rem;
