--- a/src/App.css
+++ b/src/App.css
@@ -21,12 +21,12 @@ html {
 }
 
 body {
-  height: 100vh; /* Ensures the body spans the same height as html */
+  height: 100vh; 
   margin: 0;
   font-family: 'Montserrat', sans-serif;
   padding: 0;
   box-sizing: border-box;
-  background: transparent; /* Allows the html gradient to show through */
+  background: transparent; 
 }
 /* Header styles */
 .header {
@@ -111,53 +111,3 @@ body {
     padding: 15px;
   }
 }
-/* CardSlider CSS*/
-.slider-container {
-  margin-bottom: 50px;
-  text-align: center;
-}
-
-.slider-title {
-  font-size: 1.8rem;
-  font-weight: bold;
-  margin-bottom: 20px;
-  color: #fff;
-}
-
-.slider {
-  position: relative;
-  width: 100%;
-  height: 370px;
-  overflow: hidden;
-  perspective: 1000px;
-}
-.item {
-  position: absolute;
-  width: 320px;
-  height: 320px;
-  text-align: justify;
-  background-color: #9c1112;
-  border-radius: 10px;
-  padding: 20px;
-  transition: 0.5s;
-  left: calc(50% - 177px);
-  top: 0;
-}
-#next,#prev {
-  position: absolute;
-  top: 40%;
-  color: #fff;
-  background-color: transparent;
-  border: none;
-  font-size: xxx-large;
-  font-family: monospace;
-  font-weight: bold;
-  left: 50px;
-}
-#next {
-  left: unset;
-  right: 50px;
-}
-
-/* Card3D  */
-
