--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 html {
   height: 100%; /* Ensures the html element spans the full height of the page */
+  background-color: #9c0012; 
   background-image: linear-gradient(to top right, #0ce605, #5540d8, #9c1112, #323177, #3d3191, #5540d8);
   /* background-image: linear-gradient(to top right, #5540d8, #3d3191, #323177, #9c1112, #323177, #9c1112); */
   background-attachment: fixed;
@@ -21,6 +22,7 @@ html {
 }
 
 body {
+  overflow-x: hidden;
   height: 100vh; 
   margin: 0;
   font-family: 'Montserrat', sans-serif;
