updated CSS! fixed a lot of mobile padding and implemented love letter

--- a/src/components/PasswordRedirect/PasswordRedirect.css
+++ b/src/components/PasswordRedirect/PasswordRedirect.css
@@ -5,13 +5,14 @@
   justify-content: center;
   margin-top: 20px;
   margin-bottom: 50px;
+  padding-bottom: 50px;
 }
 
 .password-form {
   display: flex;
   flex-direction: row; /* Align elements in a row */
   align-items: center; /* Center-align items vertically */
-  gap: 10px; /* Space between the input and button */
+  gap: 5px; /* Space between the input and button */
 }
 
 .password-input {
@@ -20,7 +21,7 @@
   padding: 10px;
   border: 2px solid #5540d8;
   border-radius: 8px;
-  width: 250px;
+  width: 225px;
   text-align: center;
 }
 
