--- a/src/components/PasswordRedirect/PasswordRedirect.css
+++ b/src/components/PasswordRedirect/PasswordRedirect.css
@@ -21,7 +21,8 @@
   padding: 10px;
   border: 2px solid #5540d8;
   border-radius: 8px;
-  width: 225px;
+  height: 1.9rem;
+  width: 12.5rem;
   text-align: center;
 }
 
@@ -37,6 +38,8 @@
   border: none;
   border-radius: 18px;
   cursor: pointer;
+  width: 12.5rem;
+  height: 3.5rem;
   transition: background-color 0.3s ease;
 }
 
@@ -58,7 +61,7 @@
 
 .error-message {
   color: red;
-  font-size: 0.9rem;
+  font-size: 1.4rem;
   margin-top: 10px;
 }
 
