--- a/src/components/Weather/weather.css
+++ b/src/components/Weather/weather.css
@@ -1,20 +1,132 @@
+/* Weather Container */
 .weather-container {
-  padding: 20px;
-  text-align: center;
-}
-.weather-container h1{
-  color: #d9dadb;
-}
-
-.forecast-grid {
   display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
 }
 
 .weather-container h1 {
+  color: #d9dadb;
   margin-bottom: 20px;
   font-size: 2rem;
+}
+
+/* Weather Chart */
+.weather-chart {
+  width: 100%; /* Make the chart responsive */
+  max-width: 800px;
+  margin-bottom: 20px;
+}
+
+@media (max-width: 768px) {
+  .weather-chart {
+    width: 90%; /* Shrink the chart slightly for smaller screens */
+  }
+}
+
+/* Forecast Grid */
+.forecast-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 12.5px;
+}
+
+/* Card Styles */
+.card {
+  display: grid;
+  grid-template-columns: 300px;
+  grid-template-rows: 310px 110px 80px;
+  grid-template-areas: "image" "text" "stats";
+
+  border-radius: 18px;
+  background-color: #9c1112;
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.9);
+  text-align: center;
+
+  margin: 20px auto;
+  max-width: 300px;
+  transition: 0.5s ease;
+  cursor: pointer;
+  transform-style: preserve-3d;
+  transform: perspective(1000px);
+  position: relative;
+  z-index: 1;
+}
+
+.card-image {
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  background-size: cover;
+}
+
+/* Card Text */
+.card-text {
+  grid-area: text;
+  margin: 25px;
+  transform: translateZ(15px) translateY(0px);
+  transition: transform 0.2s ease-out;
+  will-change: transform;
+}
+
+.card-text p {
+  color: #d9dadb;
+  font-size: 15px;
+  font-weight: 300;
+}
+
+.card-text h2 {
+  color: black;
+  margin-top: 0;
+  font-size: 28px;
+}
+
+.card-stats {
+  grid-area: stats;
+}
+
+/* Hover Effects */
+.card:hover {
+  transform: scale(1.09);
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.6);
+  z-index: 10;
+}
+
+.card.blurred {
+  filter: blur(5px) grayscale(100%);
+  pointer-events: none;
+  transition: filter 0.3s ease-in-out;
+}
+
+.card.selected {
+  z-index: 10;
+}
+
+/* Adjustments for Mobile Screens */
+@media (max-width: 768px) {
+  .card {
+    grid-template-columns: 210px;
+    grid-template-rows: 200px 100px 120px;
+    max-width: 210px;
+    margin: 0px; /* Reduce margin */
+  }
+
+  .card-image {
+    height: 200px; /* Smaller image height */
+  }
+  .card-text .date{
+    margin-bottom: 0px;
+    height: 22px;
+  }
+
+
+  .card-text h2 {
+    font-size: 18px; /* Smaller title font */
+  }
+
+  .card-text p {
+    font-size: 14px; /* Smaller text font */
+  }
 }
 
