mobile styling again

--- a/src/components/Weather/weather.css
+++ b/src/components/Weather/weather.css
@@ -30,7 +30,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 10px;
+  gap: 3px;
 }
 
 /* Card Styles */
@@ -106,9 +106,9 @@
 /* Adjustments for Mobile Screens */
 @media (max-width: 768px) {
   .card {
-    grid-template-columns: 195px;
-    grid-template-rows: 200px 100px 120px;
-    max-width: 195px;
+    grid-template-columns: 175px;
+    grid-template-rows: 175px 175px 60px;
+    max-width: 175px;
     margin: 0px; /* Reduce margin */
   }
 
@@ -116,13 +116,14 @@
     height: 200px; /* Smaller image height */
   }
   .card-text .date{
-    margin-bottom: 0px;
+    margin-top: -10px;
+    margin-bottom: -3px;
     height: 22px;
   }
 
 
   .card-text h2 {
-    font-size: 18px; /* Smaller title font */
+    font-size: 14px; /* Smaller title font */
   }
 
   .card-text p {
