--- a/src/CSS/DateSelector.css
+++ b/src/CSS/DateSelector.css
@@ -26,6 +26,68 @@
 .date-selector > * {
   scroll-snap-align: center;
 }
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translate(-50%, -60%);
+  }
+  to {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+  }
+}
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+  }
+  to {
+    opacity: 0;
+    transform: translate(-50%, -60%);
+  }
+}
+
+.popup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #9c1112;
+  padding: 20px;
+  border-radius: 18px;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
+  text-align: center;
+  z-index: 1000;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.popup.show {
+  visibility: visible;
+  animation: fadeIn 0.5s ease forwards;
+}
+.popup.hide {
+  animation: fadeOut 0.5s ease forwards;
+}
+.popup p {
+  color: #fff;
+  font-size: 1.25rem;
+}
+
+.popup button {
+  margin: 10px;
+  padding: 10px 20px;
+  border: none;
+  font-size: 1.25rem;
+  background-color: #8a0707;
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.popup button:hover {
+  background-color: #d30010;
+}
 @media (max-width: 768px) {
   .date-selector {
     flex-direction: column;
