--- a/src/components/PasswordRedirect/PasswordRedirect.css
+++ b/src/components/PasswordRedirect/PasswordRedirect.css
@@ -22,7 +22,7 @@
   border: 2px solid #5540d8;
   border-radius: 8px;
   height: 1.9rem;
-  width: 12.5rem;
+  width: 48%;
   text-align: center;
 }
 
@@ -38,7 +38,7 @@
   border: none;
   border-radius: 18px;
   cursor: pointer;
-  width: 12.5rem;
+  width: 48%;
   height: 3.5rem;
   transition: background-color 0.3s ease;
 }
