shuffle location and multiple date ideas (Credits to Annie!)

--- a/src/CSS/Card3D.css
+++ b/src/CSS/Card3D.css
@@ -23,6 +23,7 @@
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
   background-size: cover;
+  background-position: center;
 }
 .card-text {
   grid-area: text;
