--- a/src/CSS/DateSelector.css
+++ b/src/CSS/DateSelector.css
@@ -1,4 +1,3 @@
-
 .date-selector-container {
   text-align: center;
   margin: 20px auto; 
@@ -145,8 +144,9 @@
 }
 @media (max-width: 768px) {
   .date-selector {
-    flex-direction: column;
+    flex-direction: row;
     align-items: center; 
+    width: 100%;
+    gap: 1px;
   }
 }
-
