--- a/src/components/DateSelector/CSS/DateSelector.css
+++ b/src/components/DateSelector/CSS/DateSelector.css
@@ -108,6 +108,33 @@
   background-color: #555;
   cursor: not-allowed;
 }
+.tag-filter {
+  font-family: 'Montserrat', sans-serif;
+  padding: 10px 20px;
+  background-color: #121212;
+  color: white;
+  font-size: 1.3rem;
+  text-align: center;
+  border: none;
+  border-radius: 18px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  appearance: none; /* Remove default dropdown styles for consistency */
+}
+
+.tag-filter:hover {
+  background-color: #d30010;
+}
+
+.tag-filter:focus {
+  outline: none;
+  box-shadow: 0 0 4px rgba(255, 0, 0, 0.5); /* Add a subtle glow on focus */
+}
+
+.tag-filter option {
+  background-color: #ffffff; /* Dropdown background for options */
+  color: #000000; /* Option text color */
+}
 .notification {
   position: fixed;
   bottom: 10%; /* Position it 25% from the bottom */
@@ -161,6 +188,7 @@
   margin-top: 0;
   margin-bottom: 10px;
 }
+
 @media (max-width: 768px) {
   .date-selector {
     max-width: 100%;
