--- a/src/components/Card3D/CSS/Card3D.css
+++ b/src/components/Card3D/CSS/Card3D.css
@@ -31,7 +31,8 @@
   transition: transform 0.2s ease-out; 
   will-change: transform; 
 }
-.card-text p {
+.description {
+  margin-top: 15px;
   color: #d9dadb;
   font-size: 15px;
   font-weight: 300;
