--- a/src/components/DateSelector/CSS/DateSelector.css
+++ b/src/components/DateSelector/CSS/DateSelector.css
@@ -221,7 +221,7 @@
   .date-selector .card:hover {
     transform: scale(1.01);
   }
-  .date-selector .card-text p {
+  .date-selector .card-text .description {
     text-align: start; 
     font-size: 0.8rem; /* Smaller text font */
     padding: 0;
