--- a/src/components/FallingItem/CSS/FallingItem.css
+++ b/src/components/FallingItem/CSS/FallingItem.css
@@ -11,7 +11,7 @@
   height: 100%;
   top: 0;
   left: 0;
-  pointer-events: none;
+  /* pointer-events: none; */
 }
 .falling-objects .objects div{
   position: absolute;
@@ -23,6 +23,12 @@
   width: 100px;
   height: auto;
   filter: brightness(48%);
+}
+
+.click-the-hearts img{
+  width: 200px;
+  filter: brightness(100%);
+  border-radius: 20px;
 }
 
 .falling-objects .objects div:nth-child(1) {
@@ -58,41 +64,84 @@
 .falling-objects .objects div:nth-child(7) {
   left: 30%;
   animation: object-rotate 30s linear infinite;
-  animation-delay: 3s;
+  animation-delay: -6s;
 }
 .falling-objects .objects div:nth-child(8) {
   left: 1%;
   animation: object-rotate 6s linear infinite;
-  animation-delay: 1s;
+  animation-delay: -3s;
 }
 
-
+.falling-objects .objects div:nth-child(9) {
+  opacity: 1;
+  width: 100px;
+  height: auto;
+  filter: brightness(100%);
+  left: 50%;
+  animation: card-animation 30s linear infinite;
+  animation-delay: -25s;
+}
 
 @keyframes object-rotate {
   0% {
   opacity: 0;
   top: -10%;
-  transform: translateX(20px) rotate(0deg);
+  transform: translateX(10px) rotate(0deg);
   }
   10% {
   opacity: 1;
   }
   20% {
-  transform: translateX(-20px) rotate(45deg);
+  transform: translateX(-10px) rotate(15deg);
   }
   40% {
-  transform: translateX(-20px) rotate(90deg);
+  transform: translateX(-10px) rotate(7deg);
+  width: 100px;
   }
   60% {
-  transform: translateX(20px) rotate(180deg);
+  transform: translateX(10px) rotate(-10deg);
   }
   80% {
-  transform: translateX(-20px) rotate(180deg);
+  transform: translateX(-10px) rotate(-20deg);
   opacity: 1;
   }
   100% {
   top: 110%; 
-  transform: translateX(-20px) rotate(225deg);
+  transform: translateX(-10px) rotate(15deg);
+  opacity: 0;
+  }
+}
+
+@keyframes card-animation {
+  0% {
+  opacity: 0;
+  top: -10%;
+  transform: translateX(20px) rotate(0deg);
+  width: 200px;
+  }
+  5% {
+  opacity: 1;
+  width: 100px;
+  }
+  10% {
+  transform: translateX(-20px) rotate(-45deg);
+  }
+  15% {
+  transform: translateX(-20px) rotate(-90deg);
+  }
+  20% {
+  transform: translateX(20px) rotate(-135deg);
+  }
+  25% {
+  transform: translateX(-20px) rotate(-180deg);
+  opacity: 1;
+  }
+  30% {
+  top: 110%; 
+  transform: translateX(-20px) rotate(50deg);
+  opacity: 0;
+  }
+  100% {
   opacity: 0;
   }
 }
