--- a/src/components/FallingItem/CSS/FallingItem.css
+++ b/src/components/FallingItem/CSS/FallingItem.css
@@ -5,69 +5,71 @@
   justify-content: center;
   align-items: center;
 }
-.falling-objects .objects{
+
+.falling-objects .objects {
   position: absolute;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
-  /* pointer-events: none; */
 }
-.falling-objects .objects div{
+
+.falling-objects .objects div {
   position: absolute;
   display: block;
   z-index: 1001;
 }
 
-.falling-objects img{
+.falling-objects img {
   width: 100px;
   height: auto;
   filter: brightness(40%);
 }
 
-.click-the-hearts img{
+.click-the-hearts img {
   width: 200px;
   filter: brightness(100%);
   border-radius: 20px;
 }
 
+/* For the first 8 children */
 .falling-objects .objects div:nth-child(1) {
-  left: 20%;
+  left: calc(20% + 5vw); /* Adjusting dynamically */
   animation: object-rotate 7s linear infinite;
   animation-delay: -7s;
 }
 .falling-objects .objects div:nth-child(2) {
-  left: 50%;
+  left: calc(50% + 5vw); /* Adjusting dynamically */
   animation: object-rotate 10s linear infinite;
   animation-delay: -5s;
 }
 .falling-objects .objects div:nth-child(3) {
-  left: 65%;
+  left: calc(65% + 5vw); /* Adjusting dynamically */
   animation: object-rotate 6s linear infinite;
   animation-delay: 0s;
 }
 .falling-objects .objects div:nth-child(4) {
-  left: 65%;
+  left: calc(65% + 25vw); /* Adjusting dynamically */
   animation: object-rotate 2s linear infinite;
   animation-delay: -1s;
 }
 .falling-objects .objects div:nth-child(5) {
-  left: 60%;
+  left: calc(60% + 20vw); /* Adjusting dynamically */
   animation: object-rotate 3s linear infinite;
   animation-delay: -8s;
 }
 .falling-objects .objects div:nth-child(6) {
-  left: 10%;
+  left: calc(10% + 5vw); /* Adjusting dynamically */
   animation: object-rotate 5s linear infinite;
   animation-delay: 0s;
 }
 .falling-objects .objects div:nth-child(7) {
-  left: 30%;
+  left: calc(30% + 5vw); /* Adjusting dynamically */
   animation: object-rotate 20s linear infinite;
   animation-delay: -6s;
 }
 .falling-objects .objects div:nth-child(8) {
-  left: 1%;
+  left: calc(1% + 5vw); /* Adjusting dynamically */
   animation: object-rotate 6s linear infinite;
   animation-delay: -3s;
 }
@@ -82,66 +84,100 @@
   animation-delay: -25s;
 }
 
+/* Object rotation animation */
 @keyframes object-rotate {
   0% {
-  opacity: 0;
-  top: -10%;
-  transform: translateX(15px) rotate(0deg);
+    opacity: 0;
+    top: -10%;
+    transform: translateX(15px) rotate(0deg);
   }
   10% {
-  opacity: 1;
+    opacity: 1;
   }
   20% {
-  transform: translateX(-15px) rotate(15deg);
+    transform: translateX(-15px) rotate(15deg);
   }
   40% {
-  transform: translateX(-15px) rotate(7deg);
-  width: 100px;
+    transform: translateX(-15px) rotate(7deg);
+    width: 100px;
   }
   60% {
-  transform: translateX(15px) rotate(-10deg);
+    transform: translateX(15px) rotate(-10deg);
   }
   80% {
-  transform: translateX(15px) rotate(-20deg);
-  opacity: 1;
+    transform: translateX(15px) rotate(-20deg);
+    opacity: 1;
   }
   100% {
-  top: 110%; 
-  transform: translateX(-15px) rotate(15deg);
-  opacity: 0;
+    top: 110%; 
+    transform: translateX(-15px) rotate(15deg);
+    opacity: 0;
   }
 }
 
+/* Card animation */
 @keyframes card-animation {
   0% {
-  opacity: 0;
-  top: -10%;
-  transform: translateX(20px) rotate(0deg);
-  width: 200px;
+    opacity: 0;
+    top: -10%;
+    transform: translateX(20px) rotate(0deg);
+    width: 200px;
   }
   5% {
-  opacity: 1;
-  width: 100px;
+    opacity: 1;
+    width: 100px;
   }
   10% {
-  transform: translateX(-20px) rotate(-45deg);
+    transform: translateX(-20px) rotate(-45deg);
   }
   15% {
-  transform: translateX(-20px) rotate(-90deg);
+    transform: translateX(-20px) rotate(-90deg);
   }
   20% {
-  transform: translateX(20px) rotate(-135deg);
+    transform: translateX(20px) rotate(-135deg);
   }
   25% {
-  transform: translateX(-20px) rotate(-180deg);
-  opacity: 1;
+    transform: translateX(-20px) rotate(-180deg);
+    opacity: 1;
   }
   30% {
-  top: 110%; 
-  transform: translateX(-20px) rotate(-150deg);
-  opacity: 0;
+    top: 110%; 
+    transform: translateX(-20px) rotate(-150deg);
+    opacity: 0;
   }
   100% {
-  opacity: 0;
+    opacity: 0;
   }
 }
+
+/* Responsive adjustments for mobile */
+@media (max-width: 768px) {
+  .falling-objects .objects div {
+    left: calc(10% + 5vw); /* Adjust for smaller screens */
+  }
+  .falling-objects .objects div:nth-child(1) {
+    left: 10%;
+  }
+  .falling-objects .objects div:nth-child(2) {
+    left: 25%;
+  }
+  .falling-objects .objects div:nth-child(3) {
+    left: 40%;
+  }
+  .falling-objects .objects div:nth-child(4) {
+    left: 55%;
+  }
+  .falling-objects .objects div:nth-child(5) {
+    left: 70%;
+  }
+  .falling-objects .objects div:nth-child(6) {
+    left: 5%;
+  }
+  .falling-objects .objects div:nth-child(7) {
+    left: 20%;
+  }
+  .falling-objects .objects div:nth-child(8) {
+    left: 35%;
+  }
+}
+
