--- a/src/App.css
+++ b/src/App.css
@@ -20,12 +20,12 @@
 
 
 /* SF Pro Display */
-@font-face {
-  font-family: 'SF Pro Display';
-  src: url('/fonts/SF-Pro-Display-Thin.otf') format('opentype');
-  font-weight: 200;
-  font-style: normal;
-}
+/* @font-face { */
+/*   font-family: 'SF Pro Display'; */
+/*   src: url('/fonts/SF-Pro-Display-Thin.otf') format('opentype'); */
+/*   font-weight: 200; */
+/*   font-style: normal; */
+/* } */
 @font-face {
   font-family: 'SF Pro Display';
   src: url('/fonts/SF-Pro-Display-Light.otf') format('opentype');
@@ -38,29 +38,29 @@
   font-weight: 400;
   font-style: normal;
 }
-@font-face {
-  font-family: 'SF Pro Display';
-  src: url('/fonts/SF-Pro-Display-Medium.otf') format('opentype');
-  font-weight: 500;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'SF Pro Display';
-  src: url('/fonts/SF-Pro-Display-Semibold.otf') format('opentype');
-  font-weight: 600;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'SF Pro Display';
-  src: url('/fonts/SF-Pro-Display-Bold.otf') format('opentype');
-  font-weight: 700;
-  font-style: normal;
-}
+/* @font-face { */
+/*   font-family: 'SF Pro Display'; */
+/*   src: url('/fonts/SF-Pro-Display-Medium.otf') format('opentype'); */
+/*   font-weight: 500; */
+/*   font-style: normal; */
+/* } */
+/**/
+/* @font-face { */
+/*   font-family: 'SF Pro Display'; */
+/*   src: url('/fonts/SF-Pro-Display-Semibold.otf') format('opentype'); */
+/*   font-weight: 600; */
+/*   font-style: normal; */
+/* } */
+/**/
+/* @font-face { */
+/*   font-family: 'SF Pro Display'; */
+/*   src: url('/fonts/SF-Pro-Display-Bold.otf') format('opentype'); */
+/*   font-weight: 700; */
+/*   font-style: normal; */
+/* } */
 
 html {
-  height: 100%; /* Ensures the html element spans the full height of the page */
+  height: 100%; 
   /* background-color: #9c0012;  */
   background-color: hsl(0, 0%, 100%); 
   /* background-image: linear-gradient(to top right, #0ce605, #5540d8, #9c1112, #323177, #3d3191, #5540d8); */
@@ -72,7 +72,6 @@ body {
   overflow-x: hidden;
   height: 100vh; 
   margin: 0;
-  font-family: 'Montserrat', sans-serif;
   padding: 0;
 }
 
