--- a/src/components/FourPanels/CSS/FourPanels.css
+++ b/src/components/FourPanels/CSS/FourPanels.css
@@ -4,17 +4,31 @@
   grid-template-columns: 200px 250px 375;
   grid-auto-rows: 1fr;
   gap: 20px;
-  /* padding: 1.9rem; */
-
   border-radius: 12px;
   width: fit-content;
   height: fit-content;
   z-index: 0;
-  margin-bottom: 1.9rem;
-  margin-right: 1.9rem;
-  margin-left: 1.9rem;
-  margin-top: 1.9rem;
+  margin: 1.9rem;
 }
+.panel1 {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+  margin-top: 225px;
+}
+
+.panel2 {
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+  margin-top: 100px;
+}
+
+.panel3 {
+  grid-column: 3 / 4;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
 
 .gradient-mask-four {
   position: relative;
