--- a/src/App.css
+++ b/src/App.css
@@ -81,22 +81,34 @@ body {
   object-fit: contain;
 }
 .hamburger-menu {
-  width: 32px;
-  height: 28px;
-  position: relative;
+  padding: 0;
+  margin: 0;
+  -webkit-appearance: none;
+  appearance: none;
+
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
+
+  width: 32px;
+  height: 28px;
+  position: relative;
   background: none;
   border: none;
   cursor: pointer;
   z-index: 1100;
 }
 
+.hamburger-menu:focus {
+  outline: none;
+}
+
+
 .hamburger-menu .bar {
   display: block;
   height: 3px;
-  width: 100%;
+  width: 75%;
   background-color: hsl(0, 0%, 100%); 
   border-radius: 2px;
   transition: all 0.4s ease;
@@ -105,7 +117,7 @@ body {
 
 /* Animate into an X */
 .hamburger-menu.open .top {
-  transform: rotate(45deg) translate(6.25px, 10px);
+  transform: rotate(45deg) translate(7.5px, 10px);
 }
 
 .hamburger-menu.open .middle {
@@ -113,7 +125,7 @@ body {
 }
 
 .hamburger-menu.open .bottom {
-  transform: rotate(-45deg) translate(6.25px, -10px);
+  transform: rotate(-45deg) translate(7.5px, -10px);
 }
 
 
