--- a/src/components/DarkModeToggle/CSS/DarkModeToggle.css
+++ b/src/components/DarkModeToggle/CSS/DarkModeToggle.css
@@ -116,4 +116,19 @@
   }
 }
 
+@media (max-width: 768px){
+  .darkmode-button::before {
+    background-color: hsl(215, 7%, 100%); 
+    box-shadow: 
+      10px 0 0 -3.5px hsl(215, 7%, 100%),
+      -10px 0 0 -3.5px hsl(215, 7%, 100%),
+      0 -10px 0 -3.5px hsl(215, 7%, 100%),
+      0 10px 0 -3.5px hsl(215, 7%, 100%),
+      7px -7px 0 -3.5px hsl(215, 7%, 100%),
+      7px 7px 0 -3.5px hsl(215, 7%, 100%),
+      -7px 7px 0 -3.5px hsl(215, 7%, 100%),
+      -7px -7px 0 -3.5px hsl(215, 7%, 100%);
+  }
+}
+
 
