--- a/src/components/Button/CSS/Button.css
+++ b/src/components/Button/CSS/Button.css
@@ -72,6 +72,9 @@
     width: 12rem;
     height: 3rem;
     font-size: 1.5rem;
+    background-color: hsl(0,0%,10%);
+    backdrop-filter: none;
+    -webkit-backdrop-filter: none;
   }
 }
 
