--- a/src/components/Love/CSS/Love.css
+++ b/src/components/Love/CSS/Love.css
@@ -4,6 +4,8 @@
   opacity: 0; /* Start hidden */
   transform: translateY(20px); /* Start slightly below */
   transition: opacity 0.6s ease-out, transform 0.6s ease-out; /* Smooth fade-in and move-up */
+  padding-left: 10vw;
+  padding-right: 10vw;
 }
 
 .subdivider-container.visible {
@@ -23,7 +25,7 @@
   font-style: italic;
   font-size: 2.5rem;
   margin-top: 10px;
-  margin-bottom: 100px;
+  margin-bottom: 100vw;
 }
 
 @media (max-width: 768px) {
