--- a/src/components/LoveLetter/CSS/LoveLetter.css
+++ b/src/components/LoveLetter/CSS/LoveLetter.css
@@ -2,7 +2,7 @@
   opacity: 0;
   transform: translateY(20px);
   transition: opacity 1s ease-in-out, transform 1s ease-in-out;
-  padding-top: 90px;
+  padding-top: 150px;
   padding-bottom: 100px;
 }
 .envelope-container.visible {
@@ -64,7 +64,7 @@
   left: -120px;
 }
 
-.top {
+.envelope-top {
   content: '';
   position: absolute;
   border-top: 105px solid #9163cb;
@@ -78,7 +78,7 @@
   overflow: hidden;
 }
 
-.top.open {
+.envelope-top.open {
   transform: rotateX(160deg);
 }
 
